# PandoraTrader

PandoraSimulator/: CMakeLists.txt  PandoraSimulator.cpp  PandoraSimulatorConfig.xml
PandoraTrade/: CMakeLists.txt  PandoraDemoStrategyTrader.cpp  PandoraTraderConfig.xml
